--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:label="Şehirli"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <meta-data
-            android:name="com.google.android.gms.ads.ca-app-pub-8378554191917930~6871062192"
+            android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="ca-app-pub-8378554191917930~6871062192"/>
         <activity
             android:name=".MainActivity"
